# timeseriesqualitycheck

./: README.md  setup.cfg  signal_to_noise_ratio.py  timeseriesqualitycheck.py
src/timeseriesqualitycheck/: __init__.py  signal_to_noise_ratio.py  timeseriesqualitycheck.py
