[metadata]
name = timeseriesqualitycheck
version = 0.0.2
author = Enes
author_email = enesesvetkuzucu@gmail.com
description = timeseriesqualitycheckis a Python package designed to assess the quality of time-series data. It provides a straightforward way to evaluate the integrity and cleanliness of time-series datasets by analyzing their Time Pattern Cohesion Score (TPCS) and Signal-to-Noise Ratio (SNR)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karaposu/timeseriesqualitycheckis
project_urls =
    Bug Tracker = https://github.com/karaposu/timeseriesqualitycheckis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.15.0
    pandas >= 1.15.0
    sequentiality
    tpcs
    scipy

[options.packages.find]
where = src
